[gd_scene load_steps=4 format=3 uid="uid://defjuy807453y"]

[ext_resource type="Script" path="res://bone_equip.gd" id="1_8i1uu"]
[ext_resource type="Texture2D" uid="uid://rhcrc11qyrq0" path="res://Art/Skeleton/Items_Bone2.png" id="2_gsvml"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prrdb"]
size = Vector2(5, 17)

[node name="Node2D" type="Node2D"]

[node name="Bone" type="CharacterBody2D" parent="."]
z_index = 3
position = Vector2(20, 0)
collision_layer = 0
collision_mask = 512
safe_margin = 0.04
script = ExtResource("1_8i1uu")

[node name="BoneSprite" type="Sprite2D" parent="Bone"]
texture = ExtResource("2_gsvml")
hframes = 8
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bone"]
shape = SubResource("RectangleShape2D_prrdb")

[node name="Bone_Reload" type="Timer" parent="Bone"]
unique_name_in_owner = true

[connection signal="timeout" from="Bone/Bone_Reload" to="Bone" method="_on_bone_reload_timeout"]
